# rpgate-tg

./: .env.example  .gitignore  README.md  SETUP.md  check_setup.py  pyproject.toml  test_db_direct.py
.github/: copilot-instructions.md
.github/chatmodes/: GPT-5_Beast_Mode.chatmode.md  advisor.chatmode.md  hlbpa.chatmode.md  implementation-plan.chatmode.md
.github/instructions/: documentation.instructions.md  mcp-supabase.instructions.md  product.instructions.md  structure.instructions.md  tech.instructions.md
app/: __init__.py  config.py  main.py
docs/: BUGFIX_COMBAT_STATE_MARKDOWN.md  BUGFIX_ENEMY_COUNTERATTACK_DISPLAY.md  BUGFIX_ENEMY_DAMAGE.md  BUGFIX_JSON_OUTPUT.md  BUGFIX_SESSION_RESTORE.md  CHANGELOG.md  CHANGES_CREWAI.md  DOCUMENTATION_AUDIT_REPORT.md  HALFVEC_MIGRATION.md  MARKDOWN_FIX.md  QUICK_START_WEEK3.md  README.md  RESTRUCTURING_REPORT.md  SPRINT1_CHECKLIST.md  SPRINT2_SPEC.md  SPRINT3_CHECKLIST.md  SPRINT3_PROGRESS.md  SPRINT3_SPEC.md  SPRINT3_WEEK3.md  SPRINT3_WEEK3_CHECKLIST.md  SPRINT3_WEEK3_SUMMARY.md  STRATEGIC_PLAN.md  developent-plan.md
scripts/: apply_migration.py  check_sprint3_setup.py  check_week3_setup.py  test_db_connection.py
tests/: test_character.py  test_combat_toggle.py  test_dice.py  test_embeddings.py  test_enemy_counterattack.py  test_enemy_damage.py  test_full_reset.py  test_integration_week3.py  test_json_fix.py  test_memory_integration.py  test_memory_manager.py  test_narrative_director.py  test_new_adventure_hp_reset.py  test_response_synthesizer.py  test_rules.py  test_session_restore.py  test_world_state.py
(+49 files in other folders)
